docs(Inputs): update append/prepend slot descriptions
resolves #11612

--- a/packages/docs/src/lang/en/components/Inputs.json
+++ b/packages/docs/src/lang/en/components/Inputs.json
@@ -62,10 +62,10 @@
     "value": "The input's value"
   },
   "slots": {
-    "append": "Adds an item after input content",
+    "append": "Adds an item inside the input and after input content",
     "label": "Replaces the default label",
     "message": "Customize the messages slot.",
-    "prepend": "Adds an item before input content"
+    "prepend": "Adds an item outside the input and before input content"
   },
   "events": {
     "click": "Emitted when input is clicked",
