--- a/packages/docs/src/lang/en/components/ProgressLinear.json
+++ b/packages/docs/src/lang/en/components/ProgressLinear.json
@@ -54,6 +54,9 @@
       "desc": "The `v-progress-linear` component will be responsive to user input when using `v-model`. You can use the default slot or bind a local model to display inside of the progress. If you are looking for advanced features on a linear type component, check out [v-slider](/components/sliders)."
     }
   },
+  "events": {
+    "change": "Emitted when the component value is changed by user interaction"
+  },
   "props": {
     "active": "Components.ProgressCircular.props.active",
     "backgroundColor": "Components.ProgressCircular.props.backgroundColor",
