docs(VDatePicker): clarify date strings and correct spelling errors

--- a/packages/docs/src/lang/en/components/DatePickers.json
+++ b/packages/docs/src/lang/en/components/DatePickers.json
@@ -5,7 +5,7 @@
       "heading": "### Date pickers - Allowed dates"
     },
     "date-birthday": {
-      "desc": "Starting with year picker by default, resticting dates range and closing the picker menu after selecting the day make the perfect birthday picker.",
+      "desc": "Starting with year picker by default, restricting dates range and closing the picker menu after selecting the day make the perfect birthday picker.",
       "heading": "### Date pickers - birthday picker"
     },
     "elevation": {
@@ -118,38 +118,38 @@
   },
   "heading": "# Date/month pickers",
   "headingText": "The `v-date-picker` is stand-alone component that can be utilized in many existing Vuetify components. It offers the user a visual representation for selecting date/month.",
-  "alert1": "For more information regarding ISO 8601 and other standards, visit the official ISO (International Organization for Standardization) [International Standards](https://www.iso.org/standards.html) page.",
+  "alert1": "`v-date-picker` accepts ISO 8601 **date** strings (*YYYY-MM-DD*). For more information regarding ISO 8601 and other standards, visit the official ISO (International Organization for Standardization) [International Standards](https://www.iso.org/standards.html) page.",
   "props": {
     "disabled": "Disables interaction with the picker",
     "allowedDates": "Restricts which dates can be selected",
-    "dayFormat": "Allows you to customize the format of the day string that appears in the date table. Called with date (ISO 8601 string) arguments.",
+    "dayFormat": "Allows you to customize the format of the day string that appears in the date table. Called with date (ISO 8601 **date** string) arguments.",
     "eventColor": "Sets the color for event dot. It can be string (all events will have the same color) or `object` where attribute is the event date and value is boolean/color/array of colors for specified date or `function` taking date as a parameter and returning boolean/color/array of colors for that date",
     "events": "Array of dates or object defining events or colors or function returning boolean/color/array of colors",
     "firstDayOfWeek": "Sets the first day of the week, starting with 0 for Sunday.",
     "flat": "Removes  elevation",
-    "headerDateFormat": "Allows you to customize the format of the month string that appears in the header of the calendar. Called with date (ISO 8601 string) arguments.",
+    "headerDateFormat": "Allows you to customize the format of the month string that appears in the header of the calendar. Called with date (ISO 8601 **date** string) arguments.",
     "locale": "Sets the locale. Accepts a string with a BCP 47 language tag.",
     "localeFirstDayOfYear": "Sets the day that determines the first week of the year, starting with 0 for **Sunday**. For ISO 8601 this should be 4.",
     "max": "Maximum allowed date/month (ISO 8601 format)",
     "min": "Minimum allowed date/month (ISO 8601 format)",
-    "monthFormat": "Formatting function used for displaying months in the months table. Called with date (ISO 8601 string) arguments.",
+    "monthFormat": "Formatting function used for displaying months in the months table. Called with date (ISO 8601 **date** string) arguments.",
     "multiple": "Allow the selection of multiple dates",
     "nextIcon": "Sets the icon for next month/year button",
     "pickerDate": "Displayed year/month",
     "prevIcon": "Sets the icon for previous month/year button",
     "range": "Allow the selection of date range",
     "reactive": "Updates the picker model when changing months/years automatically",
-    "readonly": "Makes the picker readonly (doesnt't allow to select new date)",
+    "readonly": "Makes the picker readonly (doesn't allow to select new date)",
     "scrollable": "Allows changing displayed month with mouse scroll",
     "selectedItemsText": "Text used for translating the number of selected dates when using *multiple* prop. Can also be customizing globally in [Internationalization](/customization/internationalization).",
     "showCurrent": "Toggles visibility of the current date/month outline or shows the provided date/month as a current",
     "showWeek": "Toggles visibility of the week numbers in the body of the calendar",
-    "titleDateFormat": "Allows you to customize the format of the date string that appears in the title of the date picker. Called with date (ISO 8601 string) arguments.",
+    "titleDateFormat": "Allows you to customize the format of the date string that appears in the title of the date picker. Called with date (ISO 8601 **date** string) arguments.",
     "type": "Determines the type of the picker - `date` for date picker, `month` for month picker",
     "value": "Date picker model (ISO 8601 format, YYYY-mm-dd or YYYY-mm)",
-    "weekdayFormat": "Allows you to customize the format of the weekday string that appears in the body of the calendar. Called with date (ISO 8601 string) arguments.",
+    "weekdayFormat": "Allows you to customize the format of the weekday string that appears in the body of the calendar. Called with date (ISO 8601 **date** string) arguments.",
     "width": "Width of the picker",
-    "yearFormat": "Allows you to customize the format of the year string that appears in the header of the calendar. Called with date (ISO 8601 string) arguments.",
+    "yearFormat": "Allows you to customize the format of the year string that appears in the header of the calendar. Called with date (ISO 8601 **date** string) arguments.",
     "yearIcon": "Sets the icon in the year selection button"
   },
   "events": {
