--- a/packages/docs/src/lang/en/components/Snackbars.json
+++ b/packages/docs/src/lang/en/components/Snackbars.json
@@ -31,7 +31,7 @@
     "centered": "Positions the snackbar in the center of the screen, (x and y axis).",
     "contentClass": "Apply a custom class to the snackbar content",
     "multiLine": "Gives the snackbar a larger minimum height.",
-    "text": "Components.VAlert.props.text",
+    "text": "Components.Alerts.props.text",
     "transition": "Mixins.Transitionable.props.transition",
     "timeout": "Time (in milliseconds) to wait until snackbar is automatically hidden.  Use `-1` to keep open indefinitely (`0` in version < 2.3 ). It is recommended for this number to be between `4000` and `10000`. Changes to this property will reset the timeout.",
     "vertical": "Stacks snackbar content on top of the actions (button)."
