refactor(Home): port footer from live docs

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -51,6 +51,9 @@
   },
   "community": "Community",
   "community-support": "@:community @.lower:support",
+  "contact-us": "Contact Us",
+  "cookie-policy": "Cookie @:policy",
+  "copyright": "Copyright {0}",
   "customization": "Customization",
   "dark": "Dark",
   "desktop": "Desktop",
@@ -71,6 +74,7 @@
   "edit-in-codepen": "@:edit in @:codepen",
   "edit": "Edit",
   "enterprise": "Enterprise",
+  "email-address": "Email address",
   "extra-large": "Extra @.lower:large",
   "extra-small": "Extra @.lower:small",
   "features": "Features",
@@ -106,8 +110,10 @@
   "md": "Material Design",
   "medium": "Medium",
   "missing": "Could not load example `{file}`",
+  "mit-license": "MIT License",
   "mixed": "Mixed",
   "new": "New",
+  "newsletter": "Newsletter",
   "notifications": "Notifications",
   "not-found": "Not Found",
   "open-github-release": "Open @:github @.lower:release",
@@ -117,8 +123,10 @@
   "phone": "Phone",
   "pickers": "Pickers",
   "platinum-sponsors": "Platinum @:sponsors",
+  "policy": "Policy",
   "premiere-sponsors": "Premiere @:sponsors",
   "premium": "Premium",
+  "privacy-policy": "Privacy @:policy",
   "professional-support": "Professional @.lower:support",
   "progress": "Progress",
   "published-on": "Published on {date}",
@@ -126,10 +134,12 @@
   "read": "View Read ({number})",
   "ready-text": "Continue your learning with related content selected by the {team} or move between pages by using the navigation links below.",
   "ready": "Ready for more?",
+  "reddit": "Reddit",
   "release-notes": "@:release notes",
   "released-by": "Released by: {author}",
   "release": "Release",
   "releases": "Releases",
+  "released-under-the": "Released under the {0}",
   "resources-and-tools": "@:resources and tools",
   "resources": "Resources",
   "rtl": "RTL",
@@ -147,6 +157,8 @@
   "standard": "Standard",
   "store": "Store",
   "styles": "Styles and animations",
+  "subscribe": "Subscribe",
+  "subscribe-to-our": "@:subscribe to our {0}",
   "support": "Support",
   "system": "System",
   "tables": "Tables",
@@ -162,6 +174,7 @@
   "transition": "Transition",
   "translations": "Translations",
   "types": "Type | Types",
+  "twitter": "Twitter",
   "ui-components": "@:ui @:components",
   "ui": "UI",
   "ultra-wide": "Ultra-wide",
