docs(enterprise): add app-bar links, update doc page

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -73,7 +73,7 @@
   "done": "All done",
   "edit-in-codepen": "@:edit in @:codepen",
   "edit": "Edit",
-  "enterprise": "Enterprise",
+  "enterprise": "For Enterprise",
   "email-address": "Email address",
   "extra-large": "Extra @.lower:large",
   "extra-small": "Extra @.lower:small",
