fix(docs): remove local i18n links, add missing messages (#12185)

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -1,44 +1,37 @@
 {
   "accessibility": "Accessibility",
-  "ads-via-vuetify": "ads via @:vuetify",
+  "ads-via-vuetify": "ads via Vuetify",
   "alpha": "Alpha",
   "api": "API",
   "application": "Application",
   "apply": "Apply",
   "bars": "Bars",
-  "become-a-sponsor": "Become a @.lower:sponsor",
+  "become-a-sponsor": "Become a sponsor",
   "beginners-guide": "Beginner's Guide",
   "breakpoints-table": {
-    "caption": "@:md @:breakpoints",
-    "footer": "{size} on @:desktop for browser scrollbar",
-    "headings": [
-      "@:device",
-      "@:code",
-      "@:types",
-      "@:range"
-    ],
-    "large-tablet-to-laptop": "@:large @.lower:tablet to @.lower:laptop",
-    "large-to-extra-large": "4k and @.lower:ultra-wide",
-    "small-to-large-handset": "@:small to @.lower:large @.lower:phone",
-    "small-to-medium-tablet": "@:small to @.lower:medium @.lower:tablet",
+    "caption": "Material Design Breakpoints",
+    "footer": "{size} on desktop for browser scrollbar",
+    "large-tablet-to-laptop": "Large table to laptop",
+    "large-to-extra-large": "4k and ultra-wide",
+    "small-to-large-handset": "Small to large phone",
+    "small-to-medium-tablet": "Small to medium tablet",
     "spec": "Specification"
   },
   "breakpoints": "Breakpoints",
   "business": "Business",
   "close": "Close",
   "code": "Code",
-  "codepen": "Codepen",
-  "codepen-template": "@:codepen @.lower:template",
+  "codepen-template": "Codepen template",
   "company": "Company",
   "comparison": {
-    "average": "**Based on average of all Major/Minor/Patch @.lower:releases over the last 12 months.",
-    "a11y": "@:accessibility and @:section 508 @.lower:support",
+    "average": "**Based on average of all Major/Minor/Patch releases over the last 12 months.",
+    "a11y": "Accessibility and section 508 support",
     "caption": "Best Vue Frameworks {year}",
-    "enterprise": "@:business and @:enterprise @.lower:support",
-    "lts": "Long-term @:support",
-    "release": "@:release cadence**",
-    "rtl": "RTL @.lower:support",
-    "themes": "@:premium @.lower:themes",
+    "enterprise": "Business and enterprise support",
+    "lts": "Long-term Support",
+    "release": "Release cadence**",
+    "rtl": "RTL support",
+    "themes": "Premium themes",
     "tree": "Treeshaking"
   },
   "component": "Component",
@@ -46,13 +39,13 @@
   "consulting": "Consulting",
   "contents": "Contents",
   "contribute": {
-    "edit-page": "@:edit This @:page on {url}",
-    "last-updated": "Last @:updated:"
+    "edit-page": "Edit this page on {url}",
+    "last-updated": "Last updated:"
   },
   "community": "Community",
-  "community-support": "@:community @.lower:support",
+  "community-support": "Community support",
   "contact-us": "Contact Us",
-  "cookie-policy": "Cookie @:policy",
+  "cookie-policy": "Cookie policy",
   "copyright": "Copyright {0}",
   "customization": "Customization",
   "dark": "Dark",
@@ -62,21 +55,19 @@
   "direction": "Direction",
   "directive": "Directive",
   "directives": "Directives",
-  "discord": "Discord",
-  "discuss": "Discuss",
-  "discuss-on-discord": "@:discuss on @:discord",
-  "discuss-on-github": "@:discuss on @:github",
+  "discuss-on-discord": "Discuss on Discord",
+  "discuss-on-github": "Discuss on GitHub",
   "discussions": "Discussions",
   "documentation": "Documentation",
-  "documentation-status": "@:documentation status",
+  "documentation-status": "Documentation status",
   "drawer-navigation-grouping": "Drawer navigation grouping",
   "done": "All done",
-  "edit-in-codepen": "@:edit in @:codepen",
+  "edit-in-codepen": "Edit in Codepen",
   "edit": "Edit",
   "enterprise": "For Enterprise",
   "email-address": "Email address",
-  "extra-large": "Extra @.lower:large",
-  "extra-small": "Extra @.lower:small",
+  "extra-large": "Extra large",
+  "extra-small": "Extra small",
   "features": "Features",
   "file-a-bug-report": "File a bug report",
   "focus": "Focus",
@@ -85,21 +76,24 @@
   "functional": "Functional",
   "funding": "Funding",
   "getting-started": "Getting started",
-  "github": "GitHub",
-  "github-discussions": "@:github @.lower:discussions",
-  "github-issues": "@:github issues",
-  "github-releases": "@:github @.lower:releases",
+  "github-discussions": "GitHub discussions",
+  "github-issues": "GitHub issues",
+  "github-releases": "GitHub releases",
   "grid": "Grid",
   "groups": "Groups",
   "guide": "Guide",
-  "homepage": "Vuetify Home @:page",
+  "home": {
+    "get-started": "Get Started",
+    "why-vuetify": "Why Vuetify?"
+  },
+  "homepage": "Vuetify Home Ppage",
   "introduction": "Introduction",
   "invert-example-colors": "Invert example colors",
   "jobs": "Jobs",
-  "jobs-for-vue": "@:jobs for Vue",
+  "jobs-for-vue": "Jobs for Vue",
   "laptop": "Laptop",
   "large": "Large",
-  "latest-release": "Latest @.lower:release",
+  "latest-release": "Latest release",
   "layout-link": "Link to layout for {name}",
   "learn": "Learn",
   "light": "Light",
@@ -116,37 +110,43 @@
   "newsletter": "Newsletter",
   "notifications": "Notifications",
   "not-found": "Not Found",
-  "open-github-release": "Open @:github @.lower:release",
+  "open-github-release": "Open GitHub release",
   "options": "Options",
   "output": "Output",
   "page": "Page",
   "phone": "Phone",
   "pickers": "Pickers",
-  "platinum-sponsors": "Platinum @:sponsors",
+  "platinum-sponsors": "Platinum Sponsors",
   "policy": "Policy",
-  "premiere-sponsors": "Premiere @:sponsors",
+  "premiere-sponsors": "Premiere Sponsors",
   "premium": "Premium",
-  "privacy-policy": "Privacy @:policy",
-  "professional-support": "Professional @.lower:support",
+  "privacy-policy": "Privacy Policy",
+  "professional-support": "Professional support",
   "progress": "Progress",
   "published-on": "Published on {date}",
+  "pwa": {
+    "install": "Install",
+    "refresh": "Refresh Content"
+  },
   "range": "Range",
   "read": "View Read ({number})",
   "ready-text": "Continue your learning with related content selected by the {team} or move between pages by using the navigation links below.",
   "ready": "Ready for more?",
-  "reddit": "Reddit",
-  "release-notes": "@:release notes",
+  "release-notes": "Release notes",
   "released-by": "Released by: {author}",
   "release": "Release",
   "releases": "Releases",
   "released-under-the": "Released under the {0}",
-  "resources-and-tools": "@:resources and tools",
+  "resources-and-tools": "Resources and tools",
   "resources": "Resources",
   "rtl": "RTL",
-  "search": "Search",
-  "search-api": "@:search @:api",
-  "search-jobs": "@:search @:jobs",
-  "search-sass-api": "@:search SASS Variables",
+  "search": {
+    "placeholder": "Search Vuetify",
+    "key-hint": "(press / to focus)"
+  },
+  "search-api": "Search API",
+  "search-jobs": "Search Jobs",
+  "search-sass-api": "Search SASS Variables",
   "section": "Section",
   "services": "Services",
   "settings": "Settings",
@@ -158,7 +158,7 @@
   "store": "Store",
   "styles": "Styles and animations",
   "subscribe": "Subscribe",
-  "subscribe-to-our": "@:subscribe to our {0}",
+  "subscribe-to-our": "Subscribe to our {0}",
   "support": "Support",
   "system": "System",
   "tables": "Tables",
@@ -175,15 +175,13 @@
   "translations": "Translations",
   "types": "Type | Types",
   "twitter": "Twitter",
-  "ui-components": "@:ui @:components",
+  "ui-components": "UI Components",
   "ui": "UI",
   "ultra-wide": "Ultra-wide",
   "unread": "View Unread ({number})",
   "updated": "Updated",
   "video-courses": "Video courses",
-  "view-in-github": "View on @:github",
+  "view-in-github": "View on GitHub",
   "view-source": "View source",
-  "viewport": "Viewport",
-  "vue-jobs": "VueJobs",
-  "vuetify": "Vuetify"
+  "viewport": "Viewport"
 }
