--- a/packages/api-generator/src/locale/en/v-touch.json
+++ b/packages/api-generator/src/locale/en/v-touch.json
@@ -1,6 +1,3 @@
 {
-  "options": {
-    "{ move, start, end }": "Assign a callback when the touch event starts, ends, and while it is in progress",
-    "{ up, down, left, right }": "Assign a callback based upon a swipe direction. Pairing x-axis and y-axis callbacks is not recommended at this time"
-  }
+  "argument": "Object that can include a number of callbacks corresponding to the touch event. See the example for what callbacks are available. Pairing x-axis and y-axis callbacks is not recommended at this time"
 }
