docs(pwa): convert pwa install/update to a snackbar (#12188)
* docs(pwa): convert pwa install/update to a snackbar

* docs(PwaSnackbar): add md support and reset old user config

* docs(pwa.js): fix interaction with prompt

* docs(pwa): fix install prompt call

* docs(pwa.js): update init check for previous pwa install

* docs(pwa): fix illegal invocation error

* docs(PwaSnackbar): improve process, update styling

* docs(Settings): add PWA install to settings drawer

* docs(pwa): fix install call

Co-authored-by: MajesticPotatoe <amajesticpotatoe@gmail.com>

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -19,6 +19,7 @@
   },
   "breakpoints": "Breakpoints",
   "business": "Business",
+  "cancel": "Cancel",
   "close": "Close",
   "code": "Code",
   "codepen-template": "Codepen template",
@@ -87,6 +88,8 @@
     "why-vuetify": "Why Vuetify?"
   },
   "homepage": "Vuetify Home Ppage",
+  "install": "Install",
+  "install-vuetify": "Install Vuetify Documentation",
   "introduction": "Introduction",
   "invert-example-colors": "Invert example colors",
   "jobs": "Jobs",
@@ -107,6 +110,7 @@
   "mit-license": "MIT License",
   "mixed": "Mixed",
   "new": "New",
+  "new-content-available": "New content is available. Click **Refresh** to update.",
   "newsletter": "Newsletter",
   "notifications": "Notifications",
   "not-found": "Not Found",
@@ -132,6 +136,8 @@
   "read": "View Read ({number})",
   "ready-text": "Continue your learning with related content selected by the {team} or move between pages by using the navigation links below.",
   "ready": "Ready for more?",
+  "refresh": "Refresh",
+  "reddit": "Reddit",
   "release-notes": "Release notes",
   "released-by": "Released by: {author}",
   "release": "Release",
