docs(BreakpointsTable): update locale key types to type. add pluralization $tc

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -181,7 +181,7 @@
   },
   "transition": "Transition",
   "translations": "Translations",
-  "types": "Type | Types",
+  "type": "Type | Types",
   "twitter": "Twitter",
   "ui-components": "UI Components",
   "ui": "UI",
