docs: change category names and paths for multiple pages

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -118,6 +118,7 @@
   "not-found": "Not Found",
   "open-github-release": "Open GitHub release",
   "options": "Options",
+  "overview": "Overview",
   "output": "Output",
   "page": "Page",
   "phone": "Phone",
