--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -1,4 +1,5 @@
 {
+  "about": "About",
   "accessibility": "Accessibility",
   "ads-via-vuetify": "ads via Vuetify",
   "alpha": "Alpha",
@@ -7,7 +8,6 @@
   "apply": "Apply",
   "bars": "Bars",
   "become-a-sponsor": "Become a sponsor",
-  "beginners-guide": "Beginner's Guide",
   "breakpoints-table": {
     "caption": "Material Design Breakpoints",
     "footer": "{size} on desktop for browser scrollbar",
