docs: updates from mobile testing
normalize toolbar content into a new component, app-bar-items
improve all vuetify logo sizes
move lts drawer item

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -151,7 +151,7 @@
   "rtl": "RTL",
   "search": {
     "placeholder": "Search Vuetify",
-    "key-hint": "(press / to focus)"
+    "key-hint": "(press /)"
   },
   "search-api": "Search API",
   "search-jobs": "Search Jobs",
