docs: update related for multiple pages

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -1,6 +1,6 @@
 {
   "about": "About",
-  "accessibility": "Accessibility",
+  "accessibility": "Accessibility (a11y)",
   "ads-via-vuetify": "ads via Vuetify",
   "alpha": "Alpha",
   "api": "API",
