docs(directives): fix api sections

--- a/packages/api-generator/src/locale/en/v-ripple.json
+++ b/packages/api-generator/src/locale/en/v-ripple.json
@@ -1,6 +1,3 @@
 {
-  "options": {
-    "class": "`v-ripple=\"{ \"class\": 'my-class' }\"` Applies a custom class to the ripple, used for changing color",
-    "center": "`v-ripple=\"{ \"center\": true }\"` Force ripple to originate from the center of the target"
-  }
+  "argument": "An object containing options for the ripple effect. `class` applies a custom class to the ripple, and can be used for changing color. `center` forces the ripple to originate from the center of the target"
 }
