--- a/packages/api-generator/src/locale/en/v-resize.json
+++ b/packages/api-generator/src/locale/en/v-resize.json
@@ -1,6 +1,6 @@
 {
-  "options": {
-    "modifiers.quiet": "`v-resize.quiet=\"callback\"` Will **not** automatically invoke the provided callback on bind.",
-    "value": "`v-resize=\"callback\"` The function to invoke on window resize"
+  "argument": "The function to invoke on window resize",
+  "modifiers": {
+    "quiet": "Will **not** automatically invoke the provided callback on bind."
   }
 }
