--- a/packages/api-generator/src/locale/en/rippleable.json
+++ b/packages/api-generator/src/locale/en/rippleable.json
@@ -1,5 +1,5 @@
 {
   "props": {
-    "ripple": "Applies the [v-ripple](/directives/ripples) directive."
+    "ripple": "Applies the [v-ripple](/directives/ripple) directive."
   }
 }
