--- a/packages/api-generator/src/locale/en/v-text-field.json
+++ b/packages/api-generator/src/locale/en/v-text-field.json
@@ -6,8 +6,8 @@
     "filled": "Applies the alternate filled input style",
     "clearIcon": "Applied when using **clearable** and the input is dirty",
     "counter": "Creates counter for input length; if no number is specified, it defaults to 25. Does not apply any validation.",
-    "dark": "Components.Inputs.props.dark",
-    "flat": "Mixins.Soloable.props.flat",
+    "dark": "Applies the dark theme variant to the component. This will default the components color to _white_ unless you've configured your [application theme](/customization/theme) to **dark** or if you are using the **color** prop on the component. You can find more information on the Material Design documentation for [dark themes](https://material.io/design/color/dark-theme.html).",
+    "flat": "Removes elevation (shadow) added to element when using the **solo** or **solo-inverted** props",
     "fullWidth": "Designates input type as full-width",
     "multiLine": "Turns into textarea",
     "noResize": "Removes the resize handle, only applies to **multi-line** and **textarea** props",
@@ -20,8 +20,8 @@
     "rows": "Controls the number of rows in a textarea",
     "rowHeight": "Designate a custom _row-height_. Used for determining input height when using **multi-line** or **textarea** props",
     "singleLine": "Label does not move on focus/dirty",
-    "solo": "Mixins.Soloable.props.solo",
-    "soloInverted": "Mixins.Soloable.props.soloInverted",
+    "solo": "Changes the style of the input",
+    "soloInverted": "Reduces element opacity until focused",
     "suffix": "Displays suffix text",
     "textarea": "Textarea text field with alternate style",
     "toggleKeys": "Array of key codes that will toggle the input (if it supports toggling)",
