--- a/packages/api-generator/src/locale/en/v-checkbox.json
+++ b/packages/api-generator/src/locale/en/v-checkbox.json
@@ -1,7 +1,7 @@
 {
   "props": {
     "column": "Displays radio buttons in column",
-    "dark": "Components.Inputs.props.dark",
+    "dark": "Applies the dark theme variant to the component. This will default the components color to _white_ unless you've configured your [application theme](/customization/theme) to **dark** or if you are using the **color** prop on the component. You can find more information on the Material Design documentation for [dark themes](https://material.io/design/color/dark-theme.html).",
     "flat": "Display component without elevation. Default elevation for thumb is 4dp, `flat` resets it",
     "indeterminate": "Sets an indeterminate state for the checkbox",
     "indeterminateIcon": "The icon used when in an indeterminate state",
