--- a/packages/api-generator/src/locale/en/v-treeview-node.json
+++ b/packages/api-generator/src/locale/en/v-treeview-node.json
@@ -4,10 +4,12 @@
     "activeClass": "The class applied to the node when active",
     "expandIcon": "Icon used to indicate that a node can be expanded",
     "indeterminateIcon": "Icon used when node is in an indeterminate state. Only visible when `selectable` is `true`.",
+    "item": "Item object used to build the node",
     "itemChildren": "Property on supplied `items` that contains its children",
     "itemDisabled": "Property on supplied `items` that contains the disabled state of the item",
     "itemKey": "Property on supplied `items` used to keep track of node state. The value of this property has to be unique among all items.",
     "itemText": "Property on supplied `items` that contains its label text",
+    "level": "Property designating how deep the node is from the root of the treeview",
     "loadChildren": "A function used when dynamically loading children. If this prop is set, then the supplied function will be run if expanding an item that has a `item-children` property that is an empty array. Supports returning a Promise.",
     "loadingIcon": "Icon used when node is in a loading state",
     "offIcon": "Icon used when node is not selected. Only visible when `selectable` is `true`.",
