--- a/packages/api-generator/src/locale/en/v-btn-toggle.json
+++ b/packages/api-generator/src/locale/en/v-btn-toggle.json
@@ -5,7 +5,8 @@
     "dense": "Reduces the button size and padding.",
     "group": "Generally used in [v-toolbar](/components/toolbars) and [v-app-bar](/components/app-bars). Removes background color, border and increases space between the buttons",
     "rounded": "Round edge buttons",
-    "shaped": "Applies a large border radius on the top left and bottom right of the card."
+    "shaped": "Applies a large border radius on the top left and bottom right of the card.",
+    "tile": "Removes the component's border-radius."
   },
   "events": {
     "change": "Emitted when the input is changed by user interaction"
