--- a/packages/api-generator/src/locale/en/v-chip-group.json
+++ b/packages/api-generator/src/locale/en/v-chip-group.json
@@ -3,6 +3,7 @@
     "appendIcon": "The icon used in the append slot (if shown)",
     "centerActive": "Forces the selected chip to be centered",
     "column": "Remove horizontal pagination and wrap items as needed",
+    "mobileBreakpoint": "Sets the designated mobile breakpoint for the component.",
     "nextIcon": "Specify the icon to use for the next icon",
     "prependIcon": "This icon used in the prepend slot (if shown)",
     "prevIcon": "Specify the icon to use for the prev icon",
