--- a/packages/api-generator/src/locale/en/v-data-table.json
+++ b/packages/api-generator/src/locale/en/v-data-table.json
@@ -1,20 +1,37 @@
 {
   "props": {
     "calculateWidths": "Enables calculation of column widths. `widths` property will be available in select scoped slots",
+    "customFilter": "Function to filter items",
+    "customGroup": "Function used to group items",
+    "customSort": "Function used to sort items",
     "caption": "Set the caption (using `<caption>`)",
     "dense": "Decreases the height of rows",
+    "disableFiltering": "Disables filtering completely",
+    "disablePagination": "Disables pagination completely",
+    "disableSort": "Disables sorting completely",
     "expandIcon": "Icon used for expand toggle button.",
     "fixedHeader": "Fixed header to top of table. **NOTE:** Does not work in IE11",
+    "groupBy": "Changes which item property should be used for grouping items. Currently only supports a single grouping in the format: `group` or `['group']`. When using an array, only the first element is considered. Can be used with `.sync` modifier",
+    "groupDesc": "Changes which direction grouping is done. Can be used with `.sync` modifier",
     "headerProps": "Pass props to the default header. See 'v-data-table-header' API for more information",
     "headers": "An array of objects that each describe a header column. See the example below for a definition of all properties",
     "headersLength": "Can be used in combination with `hide-default-header` to specify the number of columns in the table to allow expansion rows and loading bar to function properly",
     "height": "Set an explicit height of table",
     "hideDefaultHeader": "Hide the default headers",
     "itemClass": "Property on supplied `items` that contains item's row class or function that takes an item as an argument and returns the class of corresponding row",
+    "items": "The array of items to display",
+    "itemsPerPage": "Changes how many items per page should be visible. Can be used with `.sync` modifier",
+    "locale": "Sets the locale of component. Used for translating internal text strings.",
     "mobileBreakpoint": "Used to set when to toggle between regular table and mobile view",
+    "multiSort": "If `true` then one can sort on multiple properties",
+    "mustSort": "If `true` then one can not disable sorting, it will always switch between ascending and descending",
+    "search": "Text input used to filter items",
+    "serverItemsLength": "Used only when data is provided by a server. Should be set to the total amount of items available on server so that pagination works correctly",
     "showSelect": "Shows the select checkboxes in both the header and rows (if using default rows)",
     "showExpand": "Shows the expand toggle in default rows",
     "showGroupBy": "Shows the group by toggle in the header and enables grouped rows",
+    "sortBy": "Changes which item property (or properties) should be used for sort order. Can be used with `.sync` modifier",
+    "sortDesc": "Changes which direction sorting is done. Can be used with `.sync` modifier",
     "virtualRows": "Virtualizes the rendering of rows. Be aware that you can not use the `body`, `body.prepend` or `body.append` slots with this prop."
   },
   "slots": {
