--- a/packages/api-generator/src/locale/en/v-expansion-panel-header.json
+++ b/packages/api-generator/src/locale/en/v-expansion-panel-header.json
@@ -2,7 +2,8 @@
   "props": {
     "disableIconRotate": "Removes the icon rotation animation when expanding a panel",
     "expandIcon": "Set the expand action icon",
-    "hideActions": "Hide the expand icon in the content header"
+    "hideActions": "Hide the expand icon in the content header",
+    "ripple": "Applies the [v-ripple](/directives/ripple) directive."
   },
   "slots": {
     "actions": "Expansion header actions"
