--- a/packages/api-generator/src/locale/en/v-overlay.json
+++ b/packages/api-generator/src/locale/en/v-overlay.json
@@ -1,5 +1,7 @@
 {
   "props": {
-    "opacity": "Sets the overlay opacity"
+    "absolute": "Applies **position: absolute** to the component.",
+    "opacity": "Sets the overlay opacity",
+    "zIndex": "The z-index used for the component"
   }
 }
