--- a/packages/api-generator/src/locale/en/v-select.json
+++ b/packages/api-generator/src/locale/en/v-select.json
@@ -1,15 +1,16 @@
 {
   "props": {
-    "attach": "Mixins.Detachable.props.attach",
+    "attach": "Specifies which DOM element that this component should detach to. String can be any valid querySelector and Object can be any valid Node. This will attach to the root `v-app` component by default.",
     "autocomplete": "Filter the items in the list based on user input",
     "cacheItems": "Keeps a local _unique_ copy of all items that have been passed through the **items** prop.",
     "chips": "Changes display of selections to chips",
     "combobox": "The single select variant of **tags**",
-    "dark": "Components.Inputs.props.dark",
+    "dark": "Applies the dark theme variant to the component. This will default the components color to _white_ unless you've configured your [application theme](/customization/theme) to **dark** or if you are using the **color** prop on the component. You can find more information on the Material Design documentation for [dark themes](https://material.io/design/color/dark-theme.html).",
     "debounceSearch": "Debounces the search input value being emitted",
     "deletableChips": "Adds a remove icon to selected chips",
     "disabled": "Disables the input",
     "disableLookup": "Disables keyboard lookup",
+    "eager": "Will force the components content to render on mounted. This is useful if you have content that will not be rendered in the DOM that you want crawled for SEO.",
     "editable": " Creates an editable button - [spec](https://material.io/guidelines/components/buttons.html#buttons-dropdown-buttons)",
     "filter": "The function used for filtering items",
     "hideSelected": "Do not display in the select menu items that are already selected",
