--- a/packages/api-generator/src/locale/en/v-sheet.json
+++ b/packages/api-generator/src/locale/en/v-sheet.json
@@ -1,7 +1,6 @@
 {
   "props": {
     "outlined": "Removes elevation (box-shadow) and adds a *thin* border.",
-    "shaped": "Applies a large border radius on the top left and bottom right of the card.",
-    "tag": "Specify a custom tag used on the root element."
+    "shaped": "Applies a large border radius on the top left and bottom right of the card."
   }
 }
