--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -27,7 +27,7 @@
   "comparison": {
     "average": "**Based on average of all Major/Minor/Patch releases over the last 12 months.",
     "a11y": "Accessibility and section 508 support",
-    "caption": "Best Vue Frameworks {year}",
+    "caption": "Vue Framework Comparison {year}",
     "enterprise": "Business and enterprise support",
     "lts": "Long-term Support",
     "release": "Release cadence**",
