docs: improve snackbar and fab-to-top interaction
also added some missing language

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -149,6 +149,7 @@
   "resources-and-tools": "Resources and tools",
   "resources": "Resources",
   "rtl": "RTL",
+  "scroll-to-top": "Scroll to top",
   "search": {
     "placeholder": "Search Vuetify",
     "key-hint": "(press /)"
