feat(VBtn): add new styling property plain (#12814)
resolves #3026 

Co-authored-by: John Leider <john.j.leider@gmail.com>

--- a/packages/api-generator/src/locale/en/v-btn.json
+++ b/packages/api-generator/src/locale/en/v-btn.json
@@ -8,6 +8,7 @@
     "left": "Aligns the component towards the left. This should be used with the **absolute** or **fixed** props.",
     "loading": "Adds a loading icon animation",
     "outlined": "Makes the background transparent and applies a thin border.",
+    "plain": "Removes the default background change applied when hovering over the button.",
     "right": "Aligns the component towards the right. This should be used with the **absolute** or **fixed** props.",
     "rounded": "Applies a large border radius on the button.",
     "text": "Makes the background transparent.",
