feat(VDataTable): add `foot` and `footer.prepend` slots (#13081)
resolves #8767
resolves #9695

--- a/packages/api-generator/src/locale/en/v-data-footer.json
+++ b/packages/api-generator/src/locale/en/v-data-footer.json
@@ -15,6 +15,7 @@
     "showFirstLastPage": "Show first/last icons"
   },
   "slots": {
+    "prepend": "Adds content to the empty space in the footer",
     "pageText": "Defines content for the items-per-page text"
   },
   "events": {
