--- a/packages/api-generator/src/locale/en/v-data-table.json
+++ b/packages/api-generator/src/locale/en/v-data-table.json
@@ -38,8 +38,10 @@
     "body": "Slot to replace the default table `<tbody>`",
     "body.append": "Appends elements to the end of the default table `<tbody>`",
     "body.prepend": "Prepends elements to the start of the default table `<tbody>`",
+    "foot": "Slot to add a `<tfoot>` element after the `<tbody>`. Not to be confused with the `footer` slot",
     "expanded-item": "Slot to customize expanded rows",
     "footer": "Slot to add a custom footer",
+    "footer.prepend": "Adds content to the empty space in the footer",
     "footer.page-text": "Slot to customize footer page text",
     "group": "Slot to replace the default rendering of grouped rows",
     "group.header": "Slot to customize the default rendering of group headers",
