docs(v-data-footer): change slot name (#13428)

--- a/packages/api-generator/src/locale/en/v-data-footer.json
+++ b/packages/api-generator/src/locale/en/v-data-footer.json
@@ -15,7 +15,7 @@
     "showFirstLastPage": "Show first/last icons"
   },
   "slots": {
-    "pageText": "Defines content for the items-per-page text"
+    "page-text": "Defines content for the items-per-page text"
   },
   "events": {
     "update:options": "The `.sync` event for `options` prop"
