--- a/packages/api-generator/src/locale/en/v-app-bar.json
+++ b/packages/api-generator/src/locale/en/v-app-bar.json
@@ -1,18 +1,22 @@
 {
   "props": {
-    "clippedLeft": "Designates that the application's `v-navigation-drawer` that is positioned on the left is below the app-bar.",
-    "clippedRight": "Designates that the application's `v-navigation-drawer` that is positioned on the right is below the app-bar.",
-    "collapseOnScroll": "Puts the app-bar into a collapsed state when scrolling.",
-    "elevateOnScroll": "Elevates the app-bar when scrolling.",
+    "collapseOnScroll": "Puts the component into a collapsed state when scrolling.",
+    "elevateOnScroll": "Elevates the component when scrolling.",
+    "extensionHeight": "Designate an explicit height for the `extension` slot.",
     "fadeImgOnScroll": "When using the **src** prop or `img` slot, will fade the image when scrolling.",
-    "hideOnScroll": "Hides the app-bar when scrolling. Will still show the `extension` slot.",
-    "invertedScroll": "Hides the app-bar when scrolling down and displays it when scrolling up.",
-    "scrollOffScreen": "Hides the app-bar when scrolling. Will **NOT** show the `extension` slot.",
+    "flat": "Removes the component's **box-shadow**.",
+    "floating": "Applies **display: inline-flex** to the component.",
+    "hideOnScroll": "Hides the component when scrolling. Will still show the `extension` slot.",
+    "invertedScroll": "Hides the component when scrolling down and displays it when scrolling up.",
+    "prominent": "Increases the height of the component content to the value of the **prominentHeight** prop.",
+    "prominentHeight": "Designate an explicit height when using the **prominent** prop.",
+    "scrollOffScreen": "Hides the component when scrolling. Will **NOT** show the `extension` slot.",
     "shrinkOnScroll": "Shrinks a **prominent** toolbar to a **dense** or **short** (default) one when scrolling.",
-    "src": "Image source. See `v-img` for details"
+    "collapse": "Morphs the component into a collapsed state, reducing its maximum width.",
+    "image": "The `src` used for `v-img`. For additional customization options, use the **image** slot."
   },
   "slots": {
-    "extension": "Slot positioned directly under the main content of the toolbar. Height of this slot can be set explicitly with the **extension-height** prop. If this slot has no content, the **extended** prop may be used instead.",
-    "img": "Expects the [v-img](/components/images) component. Scoped **props** should be applied with `v-bind=\"props\"`."
+    "extension": "Slot positioned directly under the main content of the toolbar. Height of this slot can be set explicitly with the **extension-height** prop.",
+    "image": "Expects the [`v-img`](/components/images/) component."
   }
 }
