--- a/packages/api-generator/src/locale/en/v-card.json
+++ b/packages/api-generator/src/locale/en/v-card.json
@@ -1,10 +1,15 @@
 {
   "props": {
-    "contain": "Applies **background-size: contain** to the background image (when using the **img** prop).",
+    "appendAvatar": "Appends a [v-avatar](/components/avatars/) component to the header",
+    "appendIcon": "Appends a [v-icon](/components/icons/) component to the header",
     "flat": "Removes the card's elevation.",
-    "hover": "Will apply an elevation of 4dp when hovered (default 2dp). You can find more information on the [elevation page](/styles/elevation).",
-    "img": "Specifies an image background for the card. For more advanced implementations, it is recommended that you use the [v-img](/components/images) component. You can find a [v-img example here](/components/cards/#media-with-text).",
-    "raised": "Specifies a higher default elevation (8dp). You can find more information on the [elevation page](/styles/elevation)."
+    "hover": "Applies **4dp** of elevation when hovered (default 2dp). You can find more information on the [elevation page](/styles/elevation).",
+    "image": "Specifies an image background for the card. For more advanced implementations, it is recommended that you use the [v-img](/components/images) component. You can find a [v-img example here](/components/cards/#media-with-text).",
+    "prependAvatar": "Prepends a [v-avatar](/components/avatars/) component to the header",
+    "prependIcon": "Prepends a [v-icon](/components/icons/) component to the header",
+    "subtitle": "Generates a `v-card-subtitle` component with the supplied value",
+    "text": "Generates a `v-card-text` component with the supplied value",
+    "title": "Generates a `v-card-title` component with the supplied value"
   },
   "events": {
     "click": "Emitted when component is clicked - Will trigger component to ripple when clicked unless the `.native` modifier is used"
