--- a/packages/api-generator/src/locale/en/v-list-item.json
+++ b/packages/api-generator/src/locale/en/v-list-item.json
@@ -1,13 +1,17 @@
 {
   "props": {
+    "active": "Controls the **active** state of the item. This is typically used to highlight the component",
+    "activeClass": "Configure the active CSS class applied when the link is active. You can find more information about the [**active-class** prop](https://router.vuejs.org/api/#active-class) on the vue-router documentation.",
+    "activeColor": "The applied color when a `v-list-item` is in an active state",
+    "appendAvatar": "Appends a [v-avatar](/components/avatars/) component to the header",
+    "appendIcon": "Appends a [v-icon](/components/icons/) component to the header",
     "color": "Applies specified color to the control when in an **active** state or **input-value** is **true** - it can be the name of material color (for example `success` or `purple`) or css color (`#033` or `rgba(255, 0, 0, 0.5)`)",
-    "dense": "Lowers max height of list tiles",
+    "contained": "Changes the component style by changing how color is applied to the background.",
     "disabled": "Disables the component",
-    "inactive": "If set, the list tile will not be rendered as a link even if it has to/href prop or @click handler",
-    "inputValue": "Controls the **active** state of the item. This is typically used to highlight the component",
-    "selectable": "Allow text selection inside `v-list-item`. This prop uses [user-select](https://developer.mozilla.org/en-US/docs/Web/CSS/user-select)",
-    "threeLine": "Increases list-item height for three lines. This prop uses [line-clamp](https://developer.mozilla.org/en-US/docs/Web/CSS/-webkit-line-clamp) and is not supported in all browsers.",
-    "twoLine": "Increases list-item height for two lines. This prop uses [line-clamp](https://developer.mozilla.org/en-US/docs/Web/CSS/-webkit-line-clamp) and is not supported in all browsers.",
+    "prependAvatar": "Prepends a [v-avatar](/components/avatars/) component to the header",
+    "prependIcon": "Prepends a [v-icon](/components/icons/) component to the header",
+    "title": "Generates a `v-list-item-title` component with the supplied value",
+    "subtitle": "Generates a `v-list-item-subtitle` component with the supplied value",
     "value": "The value used when a child of a [v-list-item-group](/components/list-item-groups)."
   }
 }
