--- a/packages/api-generator/src/locale/en/v-data-iterator.json
+++ b/packages/api-generator/src/locale/en/v-data-iterator.json
@@ -13,7 +13,7 @@
     "hideDefaultFooter": "Hides default footer",
     "itemKey": "The property on each item that is used as a unique key",
     "items": "The array of items to display",
-    "itemsPerPage": "Changes how many items per page should be visible. Can be used with `.sync` modifier",
+    "itemsPerPage": "Changes how many items per page should be visible. Can be used with `.sync` modifier. Setting this prop to `-1` will display all items on the page",
     "loading": "If `true` and no items are provided, then a loading text will be shown",
     "loadingText": "Text shown when `loading` is true and no items are provided",
     "locale": "Sets the locale used for sorting. This is passed into [`Intl.Collator()`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/Collator/Collator) in the default `customSort` function",
