--- a/packages/api-generator/src/locale/en/v-data-iterator.json
+++ b/packages/api-generator/src/locale/en/v-data-iterator.json
@@ -7,7 +7,7 @@
     "disablePagination": "Disables pagination completely",
     "disableSort": "Disables sorting completely",
     "expanded": "Array of expanded items. Can be used with `.sync` modifier",
-    "footerProps": "See the `v-data-footer` API for more information",
+    "footerProps": "See the [`v-data-footer`](/api/v-data-footer) API for more information",
     "groupBy": "Changes which item property should be used for grouping items. Currently only supports a single grouping in the format: `group` or `['group']`. When using an array, only the first element is considered. Can be used with `.sync` modifier",
     "groupDesc": "Changes which direction grouping is done. Can be used with `.sync` modifier",
     "hideDefaultFooter": "Hides default footer",
@@ -33,7 +33,7 @@
   },
   "slots": {
     "default": "The default slot. Use this to render your items",
-    "footer.page-text": "This slot is forwarded to the default footer. See the `v-data-footer` API for more information",
+    "footer.page-text": "This slot is forwarded to the default footer. See the [`v-data-footer`](/api/v-data-footer) API for more information",
     "footer": "Defines a footer below the items",
     "heading": "Defines a header above the items",
     "item": "Slot for each item",
