--- a/packages/api-generator/src/locale/en/v-progress-circular.json
+++ b/packages/api-generator/src/locale/en/v-progress-circular.json
@@ -1,12 +1,10 @@
 {
   "props": {
-    "button": "Deprecated - Pending removal",
-    "fill": "Sets the fill color of the circle",
-    "indeterminate": "Constantly animates, use when loading progress is unknown.",
+    "indeterminate": "Constantly animates, use when loading progress is unknown. If set to the string `'disable-shrink'` it will use a simpler animation that does not run on the main thread.",
     "query": "Animates like **indeterminate** prop but inverse",
-    "rotate": "Rotates the circle start point in deg",
+    "rotate": "Rotates the circle start point in degrees",
     "size": "Sets the diameter of the circle in pixels",
-    "value": "The percentage value for current progress",
+    "modelValue": "The percentage value for current progress",
     "width": "Sets the stroke of the circle in pixels"
   }
 }
