--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -100,8 +100,6 @@
   },
   "homepage": "Vuetify Home Page",
   "inline": "Inline",
-  "install": "Install",
-  "install-vuetify": "Install Vuetify Documentation",
   "introduction": "Introduction",
   "invert-example-colors": "Invert example colors",
   "jobs": "Jobs",
@@ -123,7 +121,6 @@
   "mit-license": "MIT License",
   "mixed": "Mixed",
   "new": "New",
-  "new-content-available": "New content is available. Click **Refresh** to update.",
   "newsletter": "Newsletter",
   "notifications": "Notifications",
   "not-found": "Not Found",
@@ -143,14 +140,15 @@
   "progress": "Progress",
   "published-on": "Published on {date}",
   "pwa": {
-    "install": "Install",
-    "refresh": "Refresh Content"
+    "install": "Install Vuetify Documentation",
+    "new-content-available": "New content is available. Click **Refresh** to update.",
+    "refresh": "Refresh",
+    "ignore": "Don't ask again"
   },
   "range": "Range",
   "read": "View Read ({number})",
   "ready-text": "Continue your learning with related content selected by the {team} or move between pages by using the navigation links below.",
   "ready": "Ready for more?",
-  "refresh": "Refresh",
   "reddit": "Reddit",
   "release-notes": "Release notes",
   "released-by": "Released by: {author}",
