docs: update API page structure (#14069)

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -5,6 +5,7 @@
   "alpha": "Alpha",
   "api": "API",
   "api-headers": {
+    "links": "Component Pages",
     "argument": "Argument",
     "events": "Events",
     "functions": "Functions",
