--- a/packages/api-generator/src/locale/en/v-treeview.json
+++ b/packages/api-generator/src/locale/en/v-treeview.json
@@ -5,6 +5,7 @@
     "activeClass": "The class applied to the node when active",
     "color": "Sets the color of the active node",
     "dense": "Decreases the height of the items",
+    "disabled": "Disables selection for all nodes",
     "expandIcon": "Icon used to indicate that a node can be expanded",
     "hoverable": "Applies a hover class when mousing over nodes",
     "filter": "Custom item filtering function. By default it will use case-insensitive search in item's label.",
