--- a/packages/api-generator/src/locale/en/v-otp-input.json
+++ b/packages/api-generator/src/locale/en/v-otp-input.json
@@ -1,6 +1,6 @@
 {
   "props": {
-    "length": "The OTP fields length",
+    "length": "The OTP field's length",
     "type": "Supported types: `text`, `password`, `number`",
     "dark": "Applies the dark theme variant to the component. This will default the components color to _white_ unless you've configured your [application theme](/customization/theme) to **dark** or if you are using the **color** prop on the component. You can find more information on the Material Design documentation for [dark themes](https://material.io/design/color/dark-theme.html).",
     "plain": "Outlined style applied by default to the input, set to `true` to apply plain style"
