--- a/packages/api-generator/src/locale/en/v-overlay.json
+++ b/packages/api-generator/src/locale/en/v-overlay.json
@@ -1,6 +1,7 @@
 {
   "props": {
-    "absolute": "Applies **position: absolute** to the component.",
+    "absolute": "Applies **position: absolute** to the content element.",
+    "contained": "Limits the size of the component and scrim to its offset parent. Implies `absolute` and `attach`.",
     "opacity": "Sets the overlay opacity",
     "zIndex": "The z-index used for the component"
   }
