fix: filter both VInput and VSelectionControl props (#14430)
BREAKING CHANGE: renamed onIcon/offIcon to trueIcon/falseIcon

--- a/packages/api-generator/src/locale/en/v-checkbox.json
+++ b/packages/api-generator/src/locale/en/v-checkbox.json
@@ -10,8 +10,8 @@
     "mandatory": "Forces a selection on a `v-radio` child",
     "multiple": "Changes expected model to an array",
     "name": "Sets the component's name attribute",
-    "offIcon": "The icon used when inactive",
-    "onIcon": "The icon used when active",
+    "falseIcon": "The icon used when inactive",
+    "trueIcon": "The icon used when active",
     "row": "Displays radio buttons in row"
   },
   "events": {
