--- a/packages/api-generator/src/locale/en/v-radio.json
+++ b/packages/api-generator/src/locale/en/v-radio.json
@@ -1,8 +1,8 @@
 {
   "props": {
     "name": "Sets the component's name attribute",
-    "offIcon": "The icon used when inactive",
-    "onIcon": "The icon used when active"
+    "falseIcon": "The icon used when inactive",
+    "trueIcon": "The icon used when active"
   },
   "events": {
     "change": "Emitted when the input is changed by user interaction",
