--- a/packages/api-generator/src/locale/en/v-simple-checkbox.json
+++ b/packages/api-generator/src/locale/en/v-simple-checkbox.json
@@ -6,8 +6,8 @@
     "indeterminate": "Sets an indeterminate state for the simple checkbox.",
     "indeterminateIcon": "The icon used when in an indeterminate state.",
     "light": "Applies the light theme variant to the component.",
-    "offIcon": "The icon used when inactive.",
-    "onIcon": "The icon used when active.",
+    "falseIcon": "The icon used when inactive.",
+    "trueIcon": "The icon used when active.",
     "ripple": "Applies the [v-ripple](/directives/ripple) directive.",
     "value": "A boolean value that represents whether the simple checkbox is checked."
   },
