docs: add components index page (all)

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -6,6 +6,7 @@
   "about": "About",
   "accessibility": "Accessibility (a11y)",
   "ads-via-vuetify": "ads via Vuetify",
+  "all-components": "All Components",
   "alpha": "Alpha",
   "api": "API",
   "api-headers": {
