docs(Markup/Example/UsageExample): improve design and functionality

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -61,6 +61,7 @@
   "community-support": "Community support",
   "contact-us": "Contact Us",
   "cookie-policy": "Cookie policy",
+  "copy-example-source": "Copy example source",
   "copyright": "Copyright {0}",
   "customization": "Customization",
   "dark": "Dark",
