docs(VRadioGroup): rename row to inline
closes #14631

--- a/packages/api-generator/src/locale/en/v-radio-group.json
+++ b/packages/api-generator/src/locale/en/v-radio-group.json
@@ -2,7 +2,7 @@
   "props": {
     "name": "Sets the component's name attribute",
     "column": "Displays radio buttons in column",
-    "row": "Displays radio buttons in row"
+    "inline": "Displays radio buttons in row"
   },
   "events": {
     "change": "Emitted when the input is changed by user interaction"
