--- a/packages/api-generator/src/locale/en/variant.json
+++ b/packages/api-generator/src/locale/en/variant.json
@@ -1,5 +1,5 @@
 {
   "props": {
-    "variant": "Applies one of 4 styles, default, contained, outlined, and text."
+    "variant": "Applies one of 6 styles, **contained** (default), **contained-flat**, **contained-text**, **outlined**, **plain**, and **text**."
   }
 }
