docs: refactor and cleanup components
implement qol fixes to styling and functionality
throughout various doc specific components

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -86,6 +86,7 @@
   "email-address": "Email address",
   "extra-large": "Extra large",
   "extra-small": "Extra small",
+  "feature-guides": "Feature guides",
   "features": "Features",
   "file-a-bug-report": "File a bug report",
   "focus": "Focus",
@@ -161,6 +162,7 @@
   "released-under-the": "Released under the {0}",
   "resources-and-tools": "Resources and tools",
   "resources": "Resources",
+  "roadmap": "Roadmap",
   "rtl": "RTL",
   "scroll-to-top": "Scroll to top",
   "search": {
